[package]
name = "vsrg-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "1.3.2"
byteorder = "1.4.3"
lzma-rs = "0.2.0"
md5 = "0.7.0"
num = "0.4.0"
semver = "1.0.16"
serde = { version = "1.0.151", features = ["derive"] }
serde_yaml = "0.9.16"
strum = "0.24.1"
strum_macros = "0.24.3"
zip = "0.6.3"
